--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -1,581 +1,421 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap');
-#content {
-    margin: 0;
-}
-
 body {
-    margin: 0px;
-    padding: 0px;
-    border: 0px;
-    min-height: 100%;
-    background-color: whitesmoke;
+  margin: 0px;
+  padding: 0px;
+  border: 0px;
+  min-height: 100vh;
+  background-color: whitesmoke;
 }
 
 h1 {
-    font-size: 25px;
+  font-size: 25px;
 }
-
-h2,
-h5 {
-    font-family: Open sans;
-    font-size: large;
+.abel-text{
+  font-family: 'Abel', sans-serif;
+} 
+.mono-text{
+  font-family: 'Inconsolata', monospace;
+  font-size: larger;
 }
-.hide {
-    display: none;
+h2 {
+  font-size: medium;
 }
-
-.banner {
-    color: #6bd127;
-    background-color: #042b423d;
-    grid-column: 1/4;
+.hide{
+  display: none;
 }
-
-.logo-img {
-    padding: 2rem 10px 2rem 5px;
-    height: 40%;
-    width: 5rem;
+.banner{
+  color: #FFB30F;
+  background-color: #042b423d;
+  grid-column: 1/4;
 }
-
-.logo-info {
-    grid-column: 1/2;
-    display: flex;
-    flex-direction: row;
-}
-
-main {
-
-    display: grid;
-    justify-items: center;
-}
-
-button {
-    background: none;
-    border: none;
-}
-
-button span {
-    color: #0B7AB8;
-    font-size: 2rem;
-}
-
-.hero {
-    /*background-blend-mode: darken;*/
-    /*background-position: center;*/
-    /*background-size: cover;*/
-    display: grid;
-    grid-template-columns: repeat( 2);
-    grid-template-rows: 60% 1fr;
-    overflow: hidden;
-}
-main div#hero{padding: 0px;}
-#heroPhoto{
-    z-index: -1;
-    grid-row: 1/-1;
-    grid-column: 1/3;
-    width: 100%;
-}
-
-.hero h2,
-.sub h3 {
-    font-size: 2rem;
-    color: whitesmoke;
-}
-
-
-.hero h2 span,
-.sub h2 {
-
-    color: #FFB30F;
-}
-
-.hero button#join-btn {
-    font-family: 'Open sans', monospace;
-    background-color: #141516;
-    padding: 1rem;
-    margin: 1rem;
-    color: #088dda;
-    box-shadow: 0px 0px 5px black;
-    grid-column: 2/3;
-    grid-row: 2/3;
-    height: 3rem;
-    max-width: 18rem;
-}
-
-.sub {
-    background: linear-gradient(#207cb1, #082d42);
-    text-align: center;
-}
-.sub p {
-    font-size: larger;
-    font-family: "Open sans", monospace;
-    color: whitesmoke;
-}
-
-.weather {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr 6rem 1fr 2px, 1.2fr;
-    max-width: 15rem;
-}
-
-.weather h2 {
-    grid-column: 1/3;
-}
-.weather hr {
-
-    grid-column: 1/3;
-}
-
-.weather img {
-    height: 5rem;
-}
-.open ul {
-    display: block;
-}
-/* Discover Page Main */
-
-.top {
-  padding: 30px 30px 10px 30px;
-}
-
-.top h2,
-.top p {
-  margin-top: 0;
-  color: #012a4a;
-  text-align: center;
-  font-size: 1.6rem;
-}
-
-.top h5 {
-  color: #012a4a;
-  text-align: center;
-}
-
-#gallery {
-  background-color: black;
-  display: grid;
-  grid-template-columns: 1fr;
-  margin: 0 15px 30px 15px;
-  grid-gap: 1px;
-}
-
-#gallery img {
-  width: 100%;
-  filter: blur(0em);
-  transition: filter 0.5s;
-  transition: transform 0.2s;
-}
-
-#gallery img[data-src] {
-  width: 100%;
-  filter: blur(0.2em);
-}
-
-#gallery div.blue {
-  background-color: #012a4a;
-  padding: 35px 30px 40px 30px;
-}
-
-#gallery div.light-blue {
-  background-color: #2c7da0;
-  padding: 35px 30px 40px 30px;
-}
-
-#gallery p {
-  color: white;
-  text-align: center;
-  font-size: 1.4rem;
-}
-
-.blue h4,
-.light-blue h4 {
-  color: white;
-  text-align: center;
-  font-size: 1.2rem;
-  margin: 0;
-}
-
-#gallery img:hover {
-  transform: scale(1);
-}
-button.open :nth-child(1) {
-    display: none;
-}
-button.open :nth-child(2) {
-    display: block;
-}
-
-button :nth-child(2) {
-    display: none;
-}
-
-#header-date {
-    margin-top: 3rem;
-    grid-column: 1/4;
-    color: #FFB30F;
-    text-align: center;
-    height: 1rem;
-}
-
 .header-grid {
-    display: grid;
-    grid-template-columns: 60% 1fr 1fr;
-    grid-template-rows: 1fr fit-content;
-    background-color: #132c46;
-    color: whitesmoke;
-    height: max-content;
-    font-family: 'Open sans', monospace;
-    padding-bottom: 1rem;
-}
-
-.block {
-    color: gray;
-    height: 15rem;
-    width: 85%;
-    margin: 10px;
-    padding: 1rem;
-    font-family: 'Open Sans', sans-serif;
-    box-shadow: 0px 0px 5px gray;
-}
-
-.placeholder-spotlights {
-    background: linear-gradient(#289fe4, #042b42);
-    color: gray;
-    height: fit-content;
-    margin: 10px;
-    padding: 1rem;
-    width: 90%;
-    font-family: 'Open sans', sans-serif;
-}
-
-#spot-3 {
-    display: none;
-}
-
-.spotlight {
-    display: grid;
-    justify-items: center;
-    background: whitesmoke;
-    color: #010d14;
-    width: auto;
-    height: fit-content;
-    box-shadow: 0 0 5px white;
-    padding-bottom: 1rem;
-}
-
-.join {
-    display: none;
+  display: grid;
+  grid-template-columns: 60% 1fr 1fr;
+  grid-template-rows: 1fr min-content;
+  background-color: #141516;
+  color: whitesmoke;
+  height: min-content;
+  font-family: 'Inconsolata', monospace;
+  padding: .8rem;
+  padding-bottom: 1rem;
 }
 
 .logo-img {
-    padding: 2rem 10px 2rem 5px;
-    height: 60%;
-    width: 7rem;
+  padding: 1.5rem 10px 2rem 5px;
+  height: 50%;
+  width: 4.5rem;
 }
 
 .logo-info {
-    grid-column: 1/2;
-    display: flex;
-    flex-direction: row;
+  grid-column: 1/2;
+  display: flex;
+  flex-direction: row;
 }
-
 
 .social-links {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .social-links a img {
-    margin: .3rem;
-    height: 40px;
+  margin: .3rem;
+  height: 40px;
 }
 
 button {
-    background: none;
-    border: none;
+  background: none;
+  border: none;
 }
 
 button span {
-    color: #0B7AB8;
-    font-size: 2rem;
+  color: #0B7AB8;
+  font-size: 2rem;
 }
-/* ----------------Join Uyo Special Club -------------*/
-
-#form {
-    margin: 0 auto 40px auto;
-    max-width: 700px;
-    background-color: white;
-    padding: 10px 30px;
-    border-radius: 5px;
-    padding-bottom: 30px;
-    margin-left: 1px;
-  }
-  
-  #form h3 {
-    font-size: 21px;
-  }
-  
-  .blockview {
-    display: block;
-    padding-top: 25px;
-    color: #012a4a;
-    font-weight: 700;
-  }
-  
-  #membership {
-    font-weight: 500;
-  }
-  
-  .blockview input,
-  textarea {
-    display: block;
-    margin-top: 7px;
-    color: #012a4a;
-    width: 92%;
-    padding: 10px 5px;
-  }
-  
-  .blockview input:focus {
-    background-color: rgb(169, 214, 229);
-    border: 0px;
-  }
-  
-  .blockview input:required {
-    border-right: 5px solid red;
-    border-left: 5px solid red;
-  }
-  
-  .blockview input:required:valid {
-    border-right: 5px solid rgb(60, 190, 0);
-    border-left: 5px solid rgb(60, 190, 0);
-  }
-  
-  .blockview textarea {
-    display: block;
-    margin-top: 5px;
-  }
-  
-  #membership {
-    margin-top: 15px;
-    display: block;
-  }
-  
-  .mtitle {
-    font-weight: 600;
-    font-size: 22px;
-  }
-  
-  .sbs {
-    display: block;
-    padding: 10px 0;
-    font-size: 18px;
-  }
-  
-  input[name="membership"] {
-    margin-right: 10px;
-    accent-color: #012a4a;
-  }
-  
-  #submitBtn {
-    margin-top: 10px;
-    padding: 10px 0;
-    width: 96%;
-    border: none;
-    font-size: 17px;
-    background-color: #012a4a;
-    border-radius: 4px;
-    color: white;
-  }
-  
-  .benefit h5 {
-    margin: 5px 0;
-    font-size: 17px;
-  }
-  
-  .benefit {
-    margin-top: 10px;
-    background-color: #a9d6e5;
-    padding: 5px;
-    display: none;
-    border-radius: 5px;
-    width: 93%;
-  }
-  
-  .sbs:first-child {
-    margin-top: 15px;
-  }
-  
-  td {
-    font-size: 18px;
-  }
-  
-  .thanks {
-    margin: 40px auto 60px auto;
-    max-width: 700px;
-    background-color: white;
-    padding: 10px 30px;
-    border-radius: 5px;
-    padding-bottom: 30px;
-  }
-  
 
 nav {
-    grid-row: 2/3;
-    grid-column: 1/4;
-    width: 100%;
+  grid-row: 2/3;
+  grid-column: 1/4;
+  width: 100%;
 }
 
 .active {
-    color: #f0ede7;
+  color: #FFB30F;
 }
 
 nav ul {
-    list-style-type: none;
-    padding: 0px;
-    margin: 0px;
-    margin-top: 2rem;
-
+  list-style-type: none;
+  padding: 0px;
+  margin: 0px;
+  margin-top: 2rem;
 }
-
 nav ul li {
-    display: grid;
+  display: grid;
 }
 
 nav ul li a {
-    height: 100%;
-    width: 100%;
-    color: whitesmoke;
-    text-decoration: none;
-    font-family: 'Georgia', sans-serif;
-    align-self: center;
-    text-align: center;
-    padding-top: 1rem;
-    font-weight: bold;
+  height: 100%;
+  width: 100%;
+  color: whitesmoke;
+  text-decoration: none;
+  font-family: 'Abel', sans-serif;
+  align-self: center;
+  text-align: center;
+  padding-top: 1rem;
+  font-weight: bold;
 }
 
 nav ul {
-
-
-
-    display: none;
-
-
-
+  display: none;
+}
+main {
+  min-height: 45vh;
+  display: grid;
+  justify-items: center;
 }
 
+.hero {
+  /* background: url("../images/hero-large.jpg");
+  background-position: center;
+  background-size: cover; */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 60% 1fr;
+  overflow: hidden;
+}
+main div#hero{padding: 0px;}
+#heroPhoto{
+  z-index: -1;
+  grid-row: 1/-1;
+  grid-column: 1/3;
+  width: 92vw;
+}
+.hero h2,
+.sub h3 {
+  font-size: 2rem;
+  color: whitesmoke;
+}
+.hero h2{
+  grid-column: 1/3;
+  grid-row: 1/2;
+  padding: 1rem;
+}
 
+.hero h2 span,
+.sub h2 {
+  color: #FFB30F;
+}
+
+.hero button#join-btn{
+  font-family: 'Abel', monospace;
+  background-color: #141516;
+  padding: 1rem;
+  margin: 1rem;
+  color: #088dda;
+  box-shadow: 0px 0px 5px black;
+  grid-column: 2/3;
+  grid-row: 2/3;
+  height: 3rem;
+  max-width: 18rem;
+}
+
+.sub {
+  background: #042b42;
+  text-align: center;
+}
+
+.sub p {
+  font-size: larger;
+  font-family: "Abel", monospace;
+  color: whitesmoke;
+}
+
+.weather {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr 6rem 1fr 2px 1.2fr 1.2fr;
+  max-width: 100%;
+}
+
+.weather h2 {
+  grid-column: 1/3;
+}
+
+.weather hr {
+  grid-column: 1/3;
+}
+
+.weather img {
+  height: 5rem;
+  align-self: center;
+  justify-self: center;
+}
+.weather #location-weather{
+  grid-column: 1/3;
+  grid-row: -1/-2;
+}
 .open ul {
-    display: block;
+  display: block;
 }
 
 button.open :nth-child(1) {
-    display: none;
+  display: none;
 }
 
 button.open :nth-child(2) {
-    display: block;
+  display: block;
 }
 
 button :nth-child(2) {
-    display: none;
+  display: none;
 }
 
 #header-date {
-    margin-top: 3rem;
-    grid-column: 1/4;
-    color: #46bb3b;
-    text-align: center;
-    height: 1rem;
-    border: 1px solid white;
+  margin-top: 3rem;
+  grid-column: 1/4;
+  color: #FFB30F;
+  text-align: center;
+  height: 1rem;
 }
 
-.placeholder-item {
-    border: 1px solid gray;
-    color: gray;
-    height: 15rem;
-    margin: 10px;
-    padding: 1rem;
-    border-radius: 5px;
-    font-family: 'Open Sans', sans-serif;
+.block {
+  color: gray;
+  height: 15rem;
+  /* width: 85%; */
+  margin: 10px;
+  padding: 1rem;
+  font-family: 'Abel', sans-serif;
+  box-shadow: 0px 0px 5px gray;
 }
 
 .placeholder-spotlights {
-    border: 1px solid gray;
-    color: gray;
-    height: fit-content;
-    margin: 10px;
-    padding: 1rem;
-    border-radius: 5px;
-    font-family: 'Open Sans', sans-serif;
-}
 
-.placeholder-spotlights:nth-child(3) {
-    display: none;
+  background: #042b42;
+  color: gray;
+  height: fit-content;
+  margin: 10px;
+  padding: 1rem;
+  width: 90%;
+  font-family: 'Abel', sans-serif;
+}
+#spot-3 {
+  display: none;
 }
 
 .spotlight {
-    border: 1px solid gray;
-    height: 12rem;
+  display: grid;
+      justify-items: center;
+      background: rgb(214, 238, 245);
+      color: #010d14;
+      width: auto;
+      height: fit-content;
+      padding-bottom: 1rem;
 }
 
 .join {
-    display: none;
+  display: none;
 }
 
 footer {
-    padding-top: 2rem;
-    display: flex;
-    flex-direction: column;
-    background-color: #132c46;
-    color: whitesmoke;
-    align-items: center;
-    text-align: center;
-    margin: 0;
-    grid-row: 1/-1;
+  padding-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  background-color: #141516;
+  color: whitesmoke;
+  align-items: center;
+  text-align: center;
 }
 
 .first-half {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: 'Open Sans', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'Abel', sans-serif;
 }
 
 .second-half {
-
-    font-family: 'Open Sans', monospace;
+  font-family: 'Inconsolata', monospace;
 }
 
 .footer-logo {
-    padding: 0px;
+  padding: 0px;
 }
 
 hr {
-    width: 90%;
+  width: 90%;
 }
 
-.hero button:hover {
-    transition: all 0.2s;
-    color: #0B7AB8;
-    background-color: black;
-    padding: 1.1rem;
+.hero button#join-btn:hover {
+  transition: all 0.2s;
+  color: #FFB30F;
+  background-color: black;
 }
 
 .event:hover {
-    transition: all 0.2s;
-    background: linear-gradient(#088dda, #010d14);
+  transition: all 0.2s;
 }
-
 nav ul li a:hover,
-
 .social-links img:hover {
-   color: #f1e8d4;
-    background-color: #0B7AB8;
+  color: #FFB30F;
+  background-color: #0B7AB8;
 }
-
 
 button span:hover {
-     color: #f1e8d4;
+  color: #FFB30F;
+}
+.last-visit{
+  color: #141516;
+}
+
+.noview{
+  opacity: 10%;
+  transform:translateY(20rem);
+  transition: all 0.5s;
+}   
+.view{
+  opacity: 100%;
+  transform:translateY(0rem);
+}
+
+/* Discover */
+.discover-intro{
+  grid-column: 1/-1;
+}
+.main-area{display: grid;}
+main #gallery, .main-area{
+  grid-column: 1/-1;
+  grid-row: 1/-1;
+}
+
+main #gallery{
+  justify-self: center;
+  align-items: center;
+  max-width: 100vw;
+  display: grid;
+  grid-template-columns: 1fr;
+  padding: 1rem;
+  
+}
+#gallery .photo{
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
+  transition: all 0.2s;
+}
+
+#gallery .photo .info{
+  padding: 1rem;
+}
+
+/* Join */
+#thanks{
+  font-size: 10vw;
+  text-align: center;
+}
+.abel-text span#orange{
+  color: #FFB30F;
+}
+
+.main-join-area{
+  display: grid;
+  justify-items: center;
+  width: 100vw;
+  max-width: 40rem;
+}
+form{
+  
+  background-color: white;
+  padding: 10px;
+  margin-top: 10px;
+  width: 90vw;
+  box-shadow: 0 0 10px grey;
+}
+
+.hy{
+  color: #ff2b0f;
+}
+fieldset{
+  border-radius: 3px;
+  border:1px solid #042b42 ;
+  width: 83vw;
+  margin-bottom: 2rem;
+}
+legend{
+  padding: 0.4rem;
+  font-weight: bolder;
+}
+.block-text, .block-input{
+  display: block;
+}
+label{
+  height: 5rem;
+}
+.block-radio{
+  display: block;
+ height: min-content;
+ padding: 10px;
+} 
+.block-input{
+  background-color: rgba(177, 177, 177, 0.199);
+  width: 98%;
+  border: none;
+  min-height: 2.5rem;
+  border-bottom: 2px solid #FFB30F;
+}
+.block-input:focus{
+  outline: none;
+  border-bottom: 2px solid #088dda;
+  background-color: #6cc5f81e;
+}
+
+.join-btn{
+  color: #FFB30F;
+  background-color: #042b42;
+  border: none;
+  height: 4rem;
+  width: 100%;
+}
+.join-btn:hover{
+  background-color: #010d14;
 }
 /* Directory Page */
 .company{
@@ -583,9 +423,6 @@ button span:hover {
   justify-items: center;
   padding:2.5rem;
   text-align: center;
-}
-main{
-  grid-row: 1/-1;
 }
 .company-img{
   width: 180px;
@@ -598,7 +435,11 @@ main{
   list-style-type: none;
   padding: 0px;
 }
-
+.direct-info{
+  text-align: center;
+  justify-self: center;
+  max-width:70vw;
+}
 .NP {
   filter: invert(42%) sepia(93%) saturate(1352%) hue-rotate(87deg) brightness(70%) contrast(119%);
 }
