--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -1,77 +1,78 @@
-@media only screen and (min-width: 40rem) {
+@media only screen and (min-width: 35rem) {
     main {
         display: grid;
         grid-template-columns: 60% 1fr;
         grid-template-rows: repeat(5, 1fr);
-        padding: 2rem;
+        padding: 1rem;
+        align-items: center;
     }
-
+    .block{
+        margin: 0px;
+    }
     .hero {
         grid-column: 1/3;
         width: 100%;
         padding: 0px;
     }
-    
-    .hero button{
-    right: 10%;    
-    }
-
     .news {
         grid-row: 2/3;
         grid-column: 1/3;
     }
-
+    .weather p{
+        grid-column: 1/3;
+        margin: 3px;
+    }
+    .weather{
+        grid-template-rows: 2rem 1fr 2rem 2rem;
+    }
     .placeholder-spotlights {
         grid-row: 3/4;
         grid-column: 1/3;
-        display: flex;
-        grid-template-columns: repeat(2, 1fr);
-        flex-direction: row;
+        display: grid;
+       grid-template-columns: repeat(2, 1fr);
+       height: 16rem;
+       width: 100%;
+
     }
 
     .spotlight {
-        width: 100%;
-        margin: 10px;
+     width: 100%;
+     margin: 5px;
+     }
+            
+     .spotlight img {
+     width: 70%;
     }
-    .spotlight img{
-
-        width: 100%;    
-    }
-    .join button{
-        padding: 1rem;
-        width: 100%;
-        color:aquamarine;    
-        box-shadow: 0px 0px 5px black;    
-    }
-
-    
-.join {
-
+    .join button {
+    background-color: #45494E;
+    padding: 1rem;
     width: 100%;
-    display: grid;
+    color: orange;
+    box-shadow: 0px 0px 5px black;
+}
+    .join {
+        width: 100%;
+        display: grid;
     grid-template-rows: 4rem 1fr;
     align-items: center;
     justify-items: center;
     grid-column: 1/3;
-    grid-row: 4/5;    
-    background: url("../images/join\ us.webp") rgba(13, 12, 27, 0.938);
-    background-blend-mode: soft-light;    
-    background-size: cover;
-
+    grid-row: 4/5;
+    background: url("../images/background.webp") rgba(13, 12, 27, 0.938);
+    background-blend-mode: soft-light;
+     background-size: cover;
     }
     .join button:hover {
     background-color: #0B7AB8;
     font-weight: bolder;
-   
     }
-    
+        
     .join p {
-    text-align: center;
-    font-size: larger; 
-    color: whitesmoke;
-    width: 70%;    
+     text-align: center;
+      font-size: larger;
+      color: whitesmoke;
+    width: 70%;
     }
-
     .first-half {
         display: flex;
         flex-direction: row;
@@ -107,7 +108,36 @@
     }
     .news{
         grid-column: 1/3;
-        grid-row:5/6;        
+        grid-row:5/6;
         width: 100%;
-        }
+    }
+    
+
+    #gallery .right-photo{background-color: rgb(182, 182, 182);}
+
+    .company{
+        display: grid;
+        justify-items: left;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 2rem;
+        padding:2.5rem;
+        text-align: left;
+        background-color: white;
+        color: #141516;
+        margin: 20px;
+        box-shadow: 0px 0px 3px #141516;
+    }
+    .company-img{
+        align-self: center;
+        width: 180px;
+    }
+    .company:nth-child(even){
+        background-color: white;
+        color: #141516;
+    }
+  
+    .company-info{
+        grid-column: 2/4;
+        margin-left: 10px;
+    }
 }
